[project]
name = "powietrze"
version = "0.1.0"
description = "Narzędzie do importu danych jakości powietrza do PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
powietrze = "powietrze.cli:app"
powietrze-wykres = "powietrze.wykres:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powietrze"]

